WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
57159
WebKit2: Assert in CoreIPC::typeFromCFTypeRef() when loading a site with an invalid certificate
https://bugs.webkit.org/show_bug.cgi?id=57159
Summary
WebKit2: Assert in CoreIPC::typeFromCFTypeRef() when loading a site with an i...
Sam Weinig
Reported
2011-03-26 12:30:23 PDT
WebKit2: Assert in CoreIPC::typeFromCFTypeRef() when loading a site with an invalid certificate
Attachments
Patch
(6.33 KB, patch)
2011-03-26 12:32 PDT
,
Sam Weinig
andersca
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Sam Weinig
Comment 1
2011-03-26 12:32:32 PDT
Created
attachment 87039
[details]
Patch
Anders Carlsson
Comment 2
2011-03-26 12:34:05 PDT
Comment on
attachment 87039
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=87039&action=review
> Source/WebKit2/ChangeLog:20 > + an array of SecCertificateRefs.
s/an array of//
Sam Weinig
Comment 3
2011-03-26 12:37:15 PDT
Committed
r82036
: <
http://trac.webkit.org/changeset/82036
>
WebKit Review Bot
Comment 4
2011-03-26 13:18:44 PDT
http://trac.webkit.org/changeset/82036
might have broken SnowLeopard Intel Release (Tests) The following tests are not passing: fast/forms/input-appearance-preventDefault.html
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug