2011-03-26  Sam Weinig  <sam@webkit.org>

Reviewed by Anders Carlsson.

        WebKit2: Assert in CoreIPC::typeFromCFTypeRef() when loading a site with an invalid certificate
        <rdar://problem/9188041>
        https://bugs.webkit.org/show_bug.cgi?id=57159

        * Shared/cf/ArgumentCodersCF.cpp:
        (CoreIPC::typeFromCFTypeRef):
        (CoreIPC::encode):
        (CoreIPC::decode):
        * Shared/cf/ArgumentCodersCF.h:
        Add encoding/decoding for SecCertificateRef type.

        * Shared/mac/PlatformCertificateInfo.mm:
        (WebKit::PlatformCertificateInfo::encode):
        (WebKit::PlatformCertificateInfo::decode):
        Use ArgumentCodersCF now that it knows how to encode/decode SecCertificateRefs.


Canonical link: https://commits.webkit.org/71841@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@82036 268f45cc-cd09-0410-ab3c-d52691b4dbfc